# flex-word-count

./: CMakeLists.txt  Efficient Combinatorial Optimization for Word-level.txt  README  README.md  ejercicio6.c  ejercicio6.lex  execute_flex  hola.txt  index.txt  input.txt  song_index.awk  word_count  words.c  words.lex
artistas/: Aaron Y Su Grupo Ilusion.csv  Adalberto Santiago.csv  Agustín Lara.csv  Alberto Barros.csv  Alberto Podesta.csv  Alejandro Fernandez.csv  Alejandro Filio.csv  Aleman.csv  Anibal Troilo.csv  Antonio Sanchez.csv  Armando Manzanero.csv  B B King.csv  Bad Bunny.csv  Benny More.csv  Beta.csv  Bizarrap.csv  C. Tangana.csv  Cachao Lopez.csv  Cafe Tacuba.csv  Canserbero.csv  Carlos Gardel.csv  Carlos Macias.csv  Cartel De Santa.csv  Celia Cruz.csv  Charlie Palmieri.csv  Chichi Peralta.csv  Chico Buarque.csv  Chita.csv  Consuelo Velazquez.csv  Control Machete.csv  Cristian Nodal.csv  Danny Ocean.csv  Duki.csv  Eddie Santiago.csv  Ella Fitzgerald.csv  Elvis Crespo.csv  Enrique Santos Discepolo.csv  Esteman.csv  Eugenia Leon.csv  Facundo Cabral.csv  (+95 more)
canciones/Blues/: BesoDeGinebra_RealDeCatorce.txt  BluesDelPerdedor_Prestidigitadores.txt  Coraje_MemphisLaBlusera.txt  Desconfio_Pappo.txt  DespiertateNena_LuisAlbertoSpinetta.txt  ElBluesDeLoQuePasaEnMiEscalera_JoaquinSabina.txt  Gasolina_LosDelTonos.txt  Génesis_Vox Dei.txt  JugoDeTomate_Manal.txt  LaEmociónSeHaIdo_BBKing.txt
canciones/Bolero/: AmorPerdido_MariaLuisaLandin.txt  CienAños_PedroInfante.txt  Cuidadito_MariaVictoria.txt  (+7 more)
generos/: Blues.csv  Bolero.csv  BossaNova.csv  Cumbia.csv  HipHop_Rap.csv  Jazz.csv  Mambo.csv  Merengue.csv  Pop.csv  Ranchera.csv  Reggaeton.csv  Rock.csv  Salsa.csv  Soul.csv  Tango.csv  Trova.csv
src/: word_list.c  word_list.h  words.lex
(+139 files in other folders)
